force-app/main/default/objects/DRE__DREEditorSettings__c/DRE__DREEditorSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customizes DRE/DTE editors</description>
    <label>DRE Editor Settings</label>
</CustomObject>