force-app/main/default/objects/DRE__DREEditorSettings__c/fields/DRE__Enable_Inner_Scope__c.field-meta.xml
<CustomField>
    <fullName>DRE__Enable_Inner_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected the DRE Rule Editor will show a secondary scoping method under Actions by which you can perform nested repeats over children or global records</description>
    <inlineHelpText>If selected the DRE Rule Editor will show a secondary scoping method under Actions by which you can perform nested repeats over children or global records</inlineHelpText>
    <label>Enable Inner Scope</label>
    <type>Checkbox</type>
</CustomField>