force-app/main/default/objects/DRE__DREEditorSettings__c/fields/DRE__Enable_Quick_Entry_Mode__c.field-meta.xml
<CustomField>
    <fullName>DRE__Enable_Quick_Entry_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected the Editors will switch to a data entry based layout. For example the field dropdown list no longer shows</description>
    <inlineHelpText>If selected the Editors will switch to a data entry based layout. For example the field dropdown list no longer shows</inlineHelpText>
    <label>Enable Quick Entry Mode</label>
    <type>Checkbox</type>
</CustomField>