force-app/main/default/objects/DRE__DREEditorSettings__c/fields/DRE__Show_API_Names__c.field-meta.xml
<CustomField>
    <fullName>DRE__Show_API_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected the Editors will show API names for objects and fields instead of their labels</description>
    <inlineHelpText>If selected the Editors will show API names for objects and fields instead of their labels</inlineHelpText>
    <label>Show API Names</label>
    <type>Checkbox</type>
</CustomField>