force-app/main/default/objects/DRE__DREEditorSettings__c/fields/DRE__Show_DRE_Objects__c.field-meta.xml
<CustomField>
    <fullName>DRE__Show_DRE_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected the DRE Rule Editor will display DRE/DTE objects (including the packaged ones). Also the DRE Config page will make certain DRE/DTE objects available for enabling (the packaged triggers are already enabled and cannot be configured)</description>
    <label>Show DRE Objects</label>
    <type>Checkbox</type>
</CustomField>